Fixed aspect ratio of emoji reactions

--- a/webapp/sass/layout/_post.scss
+++ b/webapp/sass/layout/_post.scss
@@ -1137,11 +1137,9 @@
             padding: 0 4px 0 3px;
 
             .post-reaction__emoji {
-                height: auto;
+                width: 16px;
+                height: 16px;
                 margin: 2px 3px 0 0;
-                max-height: 16px;
-                max-width: 16px;
-                vertical-align: middle;
             }
 
             .post-reaction__count {
